# rdicom

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  TODO.md  build.rs  config.yaml  data-elements.csv  disable-feature.patch  generate-dicom-tags.sh  test-dcm2xml.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.vim/: coc-settings.json
src/: allocator.rs  capabilities.xml  config.rs  config_file.rs  db.rs  dcm2json.rs  dcm2xml.rs  dicom_representation.rs  dicom_tags.rs  dump.rs  error.rs  index_store.rs  instance.rs  json2dcm.rs  lib.rs  misc.rs  scan.rs  serve.rs  serve2.rs  tags.rs  test.rs  wasm.rs
web/: .gitignore  CONTRIBUTION.md  README.md  index.html  main.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
web/dev/: index.html  load-one-file.html  load-one-file.ts  main.ts  rollup.config.js  split.html  split.ts  ts.config.json
web/src/: declarations.d.ts  index.ts  local-dataset.ts  local-dataset.ts.template  local-dicom-instance-decoder.ts  local-dicom-instance.ts
