[package]
name = "rdicom"
version = "0.1.0"
authors = ["jd <jean.daniel.michaud@gmail.com>"]
edition = "2021"

[lib]
name = "rdicom"
path = "src/lib.rs"
# https://doc.rust-lang.org/reference/linkage.html
# cdylib needed to compile to wasm target
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
name = "scan"
path = "src/scan.rs"
# required-features = ["scan"]

[[bin]]
name = "serve"
path = "src/serve.rs"
# required-features = ["serve"]

[[bin]]
name = "dump"
path = "src/dump.rs"
# required-features = ["dump"]

[[bin]]
name = "test"
path = "src/test.rs"
# required-features = ["test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.25" }
walkdir = { version = "2.3.2" }
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = { version = "0.9.19" }
serde_json = "1.0.94"
quick-xml = { version = "0.28.1", features = ["serialize"] }
sqlite = "0.30.3"
# sqlite3-src is a transitive dependency of sqlite but we need to add the
# bundled feature so that sqlite library is statically linked in our binaries.
# https://stackoverflow.com/a/57782994/2603925
sqlite3-src = { version = "0.4", features = ["bundled"] }
warp = { version = "0.3.3" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.17.1"

[features]
# dump = ["dep:structopt"]
# scan = ["dep:structopt", "dep:walkdir", "dep:serde", "dep:serde_yaml", "dep:sqlite"]
# test = ["dep:structopt"]
# serve = ["dep:structopt", "dep:serde", "dep:serde_yaml", "dep:sqlite", "dep:warp", "dep:tokio"]

[profile.release] # A profile to try to minimize the size
panic = "abort" # Abort on Panic
strip = true
opt-level = "z" # Optimize For Size
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

[profile.release-with-debug]
inherits = "release"
debug = true
