[package]
name = "rdicom"
version = "0.2.0"
authors = ["jd <jean.daniel.michaud@gmail.com>"]
edition = "2021"

[lib]
name = "rdicom"
path = "src/lib.rs"
# https://doc.rust-lang.org/reference/linkage.html
# cdylib needed to compile to wasm target
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
name = "scan"
path = "src/scan.rs"
required-features = ["tools"]

[[bin]]
name = "serve"
path = "src/serve.rs"
required-features = ["tools"]

[[bin]]
name = "dump"
path = "src/dump.rs"
required-features = ["tools"]

[[bin]]
name = "test"
path = "src/test.rs"
required-features = ["test"]

[[bin]]
name = "dcm2xml"
path = "src/dcm2xml.rs"
required-features = ["tools"]

[[bin]]
name = "dcm2json"
path = "src/dcm2json.rs"
required-features = ["tools"]

[[bin]]
name = "json2dcm"
path = "src/json2dcm.rs"
required-features = ["tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.25", optional = true }
walkdir = { version = "2.3.2", optional = true }
serde = { version = "1.0.157", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.19", optional = true }
serde_json = { version = "1.0.94", optional = true }
quick-xml = { version = "0.28.1", features = ["serialize"], optional = true }
sqlite = { version = "0.30.4", optional = true }
# sqlite3-src is a transitive dependency of sqlite but we need to add the
# bundled feature so that sqlite library is statically linked in our binaries.
# https://stackoverflow.com/a/57782994/2603925
sqlite3-src = { version = "0.4", features = ["bundled"], optional = true }
warp = { version = "0.3.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
once_cell = { version = "1.17.1", optional = true }
base64 = { version = "0.21.0", optional = true }
log = { version = "0.4", optional = true }
simplelog = { version = "0.12.1", optional = true }
atty = { version = "0.2", optional = true }
clap = { version = "4.3.19", features = ["derive", "string"], optional = true }
log4rs = { version = "1.2", optional = true }

[features]
tools = [
  "dep:clap",
  "dep:structopt",
  "dep:walkdir",
  "dep:serde",
  "dep:serde_yaml",
  "dep:serde_json",
  "dep:quick-xml",
  "dep:sqlite",
  "dep:sqlite3-src",
  "dep:warp",
  "dep:tokio",
  "dep:once_cell",
  "dep:base64",
  "dep:log",
  "dep:simplelog",
  "dep:atty",
  "dep:log4rs",
]

test = [
  "dep:structopt",
]

# This was needed because alignment was not taken into account by the allocator.
# Temporarily solving a crash in is_supported_type: https://stackoverflow.com/a/76648301/2603925
# [profile.dev]
# debug-assertions = false

[profile.release] # A profile to try to minimize the size
panic = "abort" # Abort on Panic
strip = true
opt-level = "z" # Optimize For Size
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

[profile.release-with-debug]
inherits = "release"
debug = true
